# camera-sensor-example

./: CMakeLists.txt  package.xml  setup.py
launch/: urdf.launch.py  urdf_open.launch.py
rviz/: defalut.rviz
urdf/: mobile_robot.urdf
